v1.3.0: 3-tab GUI, allow/deny lists with entity picker, bell recall, reinforced lever waypoints, synced lists, attack list overrides owner